--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,3 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.icon {
+    width: 32px;
+    height: 32px;
+}
+
+@layer components {
+    .text-danger {
+        @apply text-red-600
+    }
+
+    .text-input {
+        @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded focus:ring-green-500 focus:border-blue-500 block w-full p-3
+    }
+
+    .select-input {
+        @apply bg-gray-50  border  border-gray-300 text-gray-900 text-sm rounded focus:ring-green-500 focus:border-blue-500 block w-full p-3
+    }
+
+    .check-input {
+        @apply text-input appearance-none rounded text-xs h-[10px] w-1 border border-gray-200  bg-white checked:bg-blue-600  duration-200   bg-center  cursor-pointer
+    }
+
+    .check-input-sm {
+        @apply outline-none appearance-none h-4 w-4 border border-gray-300 rounded-sm bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none
+        transition duration-200  align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer
+    }
+
+    .button-style {
+        @apply bg-slate-600 hover:bg-slate-900 text-white font-semibold py-2 px-4  shadow-md transition duration-300 ease-in-out
+    }
+
+}
